--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -30,7 +30,7 @@
                 <a href="/accounts/password/change">Change Password</a>
               </li>
               <li>
-                <a href="/logout">Logout</a>
+                <a href="accounts/logout">Logout</a>
               </li>
             </ul>
           </li>
