Add a class POst in the models

--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 
-  <div><img src="/insta/static/images/instagram.jpeg" alt="insta"></div>
+  <div><img src="/images/instagram.jpeg" alt="insta"></div>
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
