--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
+  <a class="navbar-brand" href="{% url 'home' %}"><b> Instagram</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
         </a>
         <ul class="dropdown-menu" role="menu">
           <li>
-            <a href="#">Home</a>
+            <a href="{%url 'new_post'%}">Post</a>
           </li>
           <li>
             <a href="/accounts/password/change">Change Password</a>
@@ -35,11 +35,6 @@
 
         {% endif %}
 
-
-      <!-- </li> -->
-      <!-- <li class="nav-item" active>
-          <a class="nav-link" href="#" >Features</a>
-        </li> -->
       <form class="navbar-form" role="search" action="">
 
         <div class="input-group">
@@ -53,46 +48,15 @@
 
 
     </ul>
-    <!-- <div class="col-sm-4 col-md-4 navbar-right">
-
-        <form class="navbar-form" role="search" action="">
-
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Article" name="article">
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
-          </div>
-
-        </form> -->
-<!-- 
-    <div class="col-sm-6 col-md-6">
+    <div class="navbar-nav navbar-right">
       {% if user.is_authenticated %}
-      <ul>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
-            aria-expanded="false">Account
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="/accounts/password/change">Change Password</a>
-            </li>
-            <li>
-              <a href="accounts/logout">Logout</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+        <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a>
+        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
       {% else %}
-      <li>
-        <a class='btn btn-default' href="/accounts/login">Login</a>
-      </li>
-
-      {% endif %}
-    </div> -->
+        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+        <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+      {%endif%}
+    </div>
+   
   </div>
 </nav>
