--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -1,24 +1,26 @@
-{%extends "registration/base.html"%} 
+{%extends "registration/base.html"%}
 {% load bootstrap4 %}
 {% block content %}
+<br><br>
 <div class="container">
-
-  <div><img src="/images/instagram.jpeg" alt="insta"></div>
   <div class="row">
-    <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+   
+    <div class="col-md-5" style="padding-top: 50px;">
+      <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="insta">
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
       {% if form.errors %}
-        <p> Some Information Might be Incorrect </p>
+      <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="panel panel-default">
+      <div class="card container">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign Up</h3>
+          <h3 class="text-center">Instagram</h3>
         </div>
         <div class="panel-body">
 
-          <form  action="/accounts/register/" method="post">
+          <form action="/accounts/register/" method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
             <div class="form-group">
@@ -30,14 +32,13 @@
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
-
         </div>
-
       </div>
-
     </div>
-    <!-- empty div -->
-    <div class="col-md-4"></div>
+    <div class="col-md-1"></div>
+
+
+
   </div>
 </div>
 
