ressolve burges in the login page

--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -11,6 +11,11 @@
       {% endif %}
 
       <br>
+       
+    <div class="col-md-5" style="padding-top: 50px;">
+      <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="insta">
+    </div>
+    
       <div class="card" style="width: 20rem;">
 
         <div class="card-body">
