--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -1,6 +1,7 @@
 {%load bootstrap4%}
 {% load static%}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,16 +15,19 @@
 
     {% block styles %}
         {% bootstrap_css %}
+        <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     {% endblock %}
 
 
 </head>
 <body>
     <body>
-       
+        {%include 'navbar.html' %}
     
         {%block content%}
-        {%include 'navbar.html' %}
+        
     
         {%endblock%}
     
