--- a/insta/templates/home.html
+++ b/insta/templates/home.html
@@ -2,22 +2,53 @@
 {%block content%}
 {{ block.super}}
 <div>
-  <h1>Instagram</h1>
-  
   <div class="container">
     {%for new_post in posts %}
-    <div class="row">
-      <div class="col-md-8">
-        <img width="50px" height="50px" style="border-radius: 50%;" class="img img-circle" src="{{new_post.avatar}}" alt="{{new_post.author}}" srcset="">
-        {{new_post.author}}
-        <h3>{{new_post.name}}</h3>
-        <img src="{{new_post.image}}" class="img-responsive" alt="image1" width="300px">
-        <p>{{new_post.caption}}</p>
+    <div style="margin-top: 80px;">
+      <div class="row">
+        
+        <div class="col-md-8  m-auto card">
+          <a href="profile">
+            <img width="50px" height="50px" style="border-radius: 50%;" class="img img-circle" src="{{new_post.avatar}}"
+              alt="{{new_post.author}}" srcset="">
+              <span><b>{{new_post.author}}</b></span> 
+            </a>
+          
+          
+        
+          <div class="card mb-3">
+            <img src="{{new_post.image}}" class="img-responsive card-img-top" alt="image1">
+          </div>
+          
+          <div class="card-body">
+            
+            <h3>{{new_post.name}}</h3>
+            <p> <b>{{new_post.author}} </b>{{new_post.caption}}</p>
+          </div>
+          <div class="card-footer">
+            
+          <button class="btn" onclick="like()"><span id="heart" ><i class="far fa-heart"><p id="thisone"></p></i></span></button> 
+           
+            <a href=""><i class="far fa-paper-plane"></i></a>
+          </div>      
+        </div>
       </div>
     </div>
-    {% endfor %}
+    <script>
+      function doit(){}
     
-
+    
+    
+      var startvalue = 0;
+      var bee = document.getElementById("thisone").innerHTML = startvalue;
+      function like(){
+        startvalue++;
+      }
+    </script>
+    {% endfor %}
   </div>
 </div>
+
+
+  
 {%endblock%}
