--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -1,44 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home' %}"><b> Instagram</b></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; z-index: 1;   width: 100%;">
+
+  <a class="navbar-brand" href="{% url 'home' %}"
+    style="font-family: 'Lobster Two', cursive; font-size:25px; margin-left:40px;">Instagram</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <!-- <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a> -->
-        {% if user.is_authenticated %}
-        <!-- <ul> -->
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
-          aria-expanded="false">Account
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <li>
-            <a href="{%url 'new_post'%}">Post</a>
-          </li>
-          <li>
-            <a href="/accounts/password/change">Change Password</a>
-          </li>
-          <li>
-            <a href="accounts/logout">Logout</a>
-          </li>
-        </ul>
-      </li>
-
-      {% else %}
-        <li>
-          <a class='btn btn-default' href="/accounts/login">Login</a>
-        </li>
-
-        {% endif %}
-
+  
       <form class="navbar-form" role="search" action="">
 
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Article" name="article">
+          <input type="text" class="form-control" placeholder="Search" name="article">
           <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
@@ -46,17 +19,47 @@
 
       </form>
 
+      <ul class="navbar-nav">
+
+        <li><a href="{% url 'home' %}"><i class="fas fa-home"></i></a> </li>
+      <li class="nav-item active">
+        <!-- <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a> -->
+        {% if user.is_authenticated %}
+        <!-- <ul> -->
+
+        
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
+          aria-expanded="false">Account
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <a href="{%url 'update_profile'%}">Update Profile</a>
+          </li>
+          <li>
+            <a href="{%url 'profile'%}">Profile</a>
+          </li>
+          <li>
+            <a href="accounts/login">Logout</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+     <div><img width="120%" height="120%" src="{{user.profile.profile_pic.url }}" alt="profile" style="border-radius: 50%; width:30px; height:30px; "></a>  </div>
+
+      </li>
+      {% else %}
+      <li>
+        <a class='btn btn-default' href="/accounts/login">Login</a>
+      </li>
+
+      {% endif %}
+
+      <li ><a class="nav-item nav-link" href="{%url 'new_post'%}"><i class="fas fa-plus"></i>Post</a></li>
+
 
     </ul>
-    <div class="navbar-nav navbar-right">
-      {% if user.is_authenticated %}
-        <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a>
-        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-      {% else %}
-        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-        <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-      {%endif%}
-    </div>
-   
+
   </div>
 </nav>
