--- a/insta/templates/new_post.html
+++ b/insta/templates/new_post.html
@@ -1,35 +1,19 @@
+{% extends 'base.html' %}
 {% load bootstrap4 %}
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
+<!-- {% load staticfiles %} -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Post </title>
-    {{form.media}}
-</head>
-{{form.media}}
-{% block styles %} {% bootstrap_css %}
+{%block content%}
 
-<body>
-    <div class="container">
+<div class="container">
+    <div class="col-sm-6 m-auto card">
         <form action="{%url 'new_post'%}" method="post" enctype="multipart/form-data">
             {%csrf_token%}
 
             {% bootstrap_form form%}
-            <input type="submit" class="btn btn-success btn-lg" value="Post">
+            <input type="submit" class="btn btn-info btn-lg btn-center" value="Post">
         </form>
-
-        {% block scripts %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        {% bootstrap_javascript %} {% endblock %}
-
-
     </div>
+</div>
 
-</body>
 
 {% endblock %}
-
-</html>
