--- a/insta/templates/profile.html
+++ b/insta/templates/profile.html
@@ -2,32 +2,42 @@
 {% load bootstrap4 %}
 {%load crispy_forms_tags%}
 {%block content%}
-<div class="content-section">
-    <div class="media">
-        <img class="rounded-circle account-img" width="30%" height="30%" src="{{user.profile.profile_pic.url  }}"
-            alt="profile">
-
-        <div class="media-body">
-            <h2 class="account-heading">{{user.username}}</h2>
-            <p class="text-secondary">{{user.email}}</p>
-            <p>{{user.bio}}</p>
-
+<div class="container">
+    <div class="row mt-5">
+        {%if user.profile.profile_pic%}
+        <div class="col-sm-6 m-auto card">
+            <br>
+            <div class="content-section">
+                <div class="row align-items-center">
+                    <div class="col-sm-4">
+                        <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
+                            <img width="120%" height="120%" src="{{user.profile.profile_pic.url }}" alt="profile">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="media-body">
+                            <h2 class="account-heading">{{user.username}}</h2>
+                            <p class="text-secondary">{{user.email}}</p>
+                            <p>{{user.profile.bio}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <form method="POST" enctype="multipart/form-data">
+                    {%csrf_token%}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom pt-4 mb-4">Profile info</legend>
+                        {{ user_form|crispy }}
+                        {{ profile_form|crispy }}
+                    </fieldset>
+                    <div class="form-group">
+                        <button class="btn btn-outline-info" type="submit">update</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
+    {%endif%}
 </div>
-<div class="container">
-    <form method="POST" enctype="multipart/form-data">
-        {%csrf_token%}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Profile info</legend>
-            {{ user_form|crispy }}
-            {{ profile_form|crispy }}
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">update</button>
-        </div>
-    </form>
-</div>
-
-</div>
-{%endblock content%}
+{%endblock%}
