--- a/insta/templates/home.html
+++ b/insta/templates/home.html
@@ -2,53 +2,51 @@
 {%block content%}
 {{ block.super}}
 <div>
-  <div class="container">
+  <div class="container" style="margin-top: 100px;">
     {%for new_post in posts %}
-    <div style="margin-top: 80px;">
+    <div>
       <div class="row">
-        
+
         <div class="col-md-8  m-auto card">
           <a href="profile">
             <img width="50px" height="50px" style="border-radius: 50%;" class="img img-circle" src="{{new_post.avatar}}"
               alt="{{new_post.author}}" srcset="">
-              <span><b>{{new_post.author}}</b></span> 
-            </a>
-          
-          
-        
+            <span><b>{{new_post.author}}</b></span>
+          </a>
+
+
+
           <div class="card mb-3">
             <img src="{{new_post.image}}" class="img-responsive card-img-top" alt="image1">
           </div>
-          
+
           <div class="card-body">
-            
+
             <h3>{{new_post.name}}</h3>
             <p> <b>{{new_post.author}} </b>{{new_post.caption}}</p>
           </div>
           <div class="card-footer">
-            
-          <button class="btn" onclick="like()"><span id="heart" ><i class="far fa-heart"><p id="thisone"></p></i></span></button> 
-           
-            <a href=""><i class="far fa-paper-plane"></i></a>
-          </div>      
+            <a class="like"><i class="fa fa-thumbs-o-up"></i>
+              Like <input class="qty1" name="qty1" readonly="readonly" type="text" value="0" />
+            </a>
+            <a class="dislike"><i class="fa fa-thumbs-o-down"></i>
+              Dislike <input class="qty2" name="qty2" readonly="readonly" type="text" value="0" />
+            </a>
+            <!-- <i onclick="myFunction(this)" class="fa fa-thumbs-up fa-2x liking"></i> -->
+
+            <!-- <button class="btn" onclick="like()"><span id="heart" ><i class="far fa-heart"><p id="thisone"></p></i></span></button>  -->
+
+            <!-- <a href=""><i class="far fa-paper-plane"></i></a> -->
+          </div>
         </div>
       </div>
     </div>
-    <script>
-      function doit(){}
-    
-    
-    
-      var startvalue = 0;
-      var bee = document.getElementById("thisone").innerHTML = startvalue;
-      function like(){
-        startvalue++;
-      }
+
     </script>
     {% endfor %}
   </div>
 </div>
 
 
-  
+
 {%endblock%}
