--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -7,47 +7,23 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-  
-      <form class="navbar-form" role="search" action="">
 
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search" name="article">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-          </div>
+    <form class="navbar-form" role="search" action="">
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" name="article">
+        <div class="input-group-btn">
+          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
+      </div>
 
-      </form>
+    </form>
 
-      <ul class="navbar-nav">
+    <ul class="navbar-nav">
 
-        <li><a href="{% url 'home' %}"><i class="fas fa-home"></i></a> </li>
+      <li class="mt-2"><a href="{% url 'home' %}"><i class="fas fa-home"></i></a> </li>
       <li class="nav-item active">
-        <!-- <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a> -->
         {% if user.is_authenticated %}
-        <!-- <ul> -->
-
-        
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
-          aria-expanded="false">Account
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <li>
-            <a href="{%url 'update_profile'%}">Update Profile</a>
-          </li>
-          <li>
-            <a href="{%url 'profile'%}">Profile</a>
-          </li>
-          <li>
-            <a href="accounts/login">Logout</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-     <div><img width="120%" height="120%" src="{{user.profile.profile_pic.url }}" alt="profile" style="border-radius: 50%; width:30px; height:30px; "></a>  </div>
-
       </li>
       {% else %}
       <li>
@@ -55,11 +31,31 @@
       </li>
 
       {% endif %}
-
-      <li ><a class="nav-item nav-link" href="{%url 'new_post'%}"><i class="fas fa-plus"></i>Post</a></li>
-
-
     </ul>
 
+    <ul style="list-style-type:none;">
+    <li class="dropdown mt-3">
+      <img width="120%" height="120%" src="{{user.profile.profile_pic.url }}" alt=""
+        style="border-radius: 50%; width:30px; height:30px; ">
+      <a href="#" class="dropdown-toggle btn btn-default mt-2" data-toggle="dropdown" role="button"
+        aria-expanded="false">Account
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="{%url 'update_profile'%}">Update Profile</a>
+        </li>
+        <li>
+          <a href="{%url 'profile'%}">Profile</a>
+        </li>
+        <li>
+          <a href="/accounts/logout">Logout</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
   </div>
+
+  
 </nav>
