--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -3,20 +3,19 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <br>
+    <div class="col-md-5" style="margin-top: 50px;">
+      <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="insta">
+    </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-5">
       {% if form.errors %}
       <p> Password or Username is incorrect </p>
       {% endif %}
 
-      <br>
-       
-    <div class="col-md-5" style="padding-top: 50px;">
-      <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="insta">
-    </div>
-    
-      <div class="card" style="width: 20rem;">
+
+
+      <div class="card" style="width: 20rem; margin-top:70px;">
 
         <div class="card-body">
           <h3 class="text-center"><b>Instagram</b> </h3>
@@ -32,34 +31,32 @@
 
             </div>
         </div>
-      </div>
-      <!-- <div style="padding-top: 10px;"> -->
-     
-      <div class="container card " width="50px" style="margin-top: 20px;">
-        <br>
-        <p>you dont have an account? <a href="/accounts/register"> Sign Up</a></p>
+
+        <hr>
+        <p class="container">you dont have an account? <a href="/accounts/register"> Sign Up</a></p>
       </div>
     </div>
 
-      <input type="hidden" name="next" value="{{next}}">
+  </div>
 
-      </form>
+  <input type="hidden" name="next" value="{{next}}">
 
+  </form>
+</div>
 
-
-
-    </div>
-    <!-- <div class="card" style="width: 18rem;">
+</div>
+<div class="col-md-2"></div>
+<!-- <div class="card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div> -->
-    <!-- empty div -->
-    <div class="col-md-4"></div>
+<!-- empty div -->
 
-  </div>
+
+</div>
 </div>
 
 {% endblock %}
