--- a/insta/templates/update_profile.html
+++ b/insta/templates/update_profile.html
@@ -3,7 +3,7 @@
 {%load crispy_forms_tags%}
 {%block content%}
 <div class="container">
-    <div class="row mt-5">
+    <div class="row mt-5" style="padding-top: 80px;">
         <div class="col-sm-6 m-auto card">
             <br>
             <div>
