--- a/insta/templates/new_post.html
+++ b/insta/templates/new_post.html
@@ -3,7 +3,7 @@
 <!-- {% load staticfiles %} -->
 
 {%block content%}
-
+<div style ="margin-top: 100px;">
 <div class="container">
     <div class="col-sm-6 m-auto card">
         <form action="{%url 'new_post'%}" method="post" enctype="multipart/form-data">
@@ -13,6 +13,7 @@
             <input type="submit" class="btn btn-info btn-lg btn-center" value="Post">
         </form>
     </div>
+</div>
 </div>
 
 
