--- a/insta/templates/registration/base.html
+++ b/insta/templates/registration/base.html
@@ -16,6 +16,7 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
   {% endblock %}
 
 </head>
