--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -4,10 +4,11 @@
 <div class="container">
   <div class="row">
     <br>
+    <div class="col-md-1"></div>
     <div class="col-md-5" style="margin-top: 50px;">
       <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="insta">
     </div>
-    <div class="col-md-2"></div>
+    
     <div class="col-md-5">
       {% if form.errors %}
       <p> Password or Username is incorrect </p>
@@ -18,7 +19,7 @@
       <div class="card" style="width: 20rem; margin-top:70px;">
 
         <div class="card-body">
-          <h3 class="text-center"><b>Instagram</b> </h3>
+          <h3 class="text-center" style="font-family: 'Lobster Two', cursive;">Instagram </h3>
         </div>
         <div class="container">
 
@@ -45,7 +46,7 @@
 </div>
 
 </div>
-<div class="col-md-2"></div>
+<div class="col-md-1"></div>
 <!-- <div class="card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
