--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -16,8 +16,9 @@
       <div class="card container">
 
         <div class="panel-heading">
-          <h3 class="text-center">Instagram</h3>
+          <h3 class="text-center" style="font-family: 'Lobster Two', cursive;">Instagram</h3>
         </div>
+      
         <div class="panel-body">
 
           <form action="/accounts/register/" method="post">
