--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; z-index: 1;   width: 100%;">
 
   <a class="navbar-brand" href="{% url 'home' %}"
-    style="font-family: 'Lobster Two', cursive; font-size:25px; margin-left:80px;">Instagram</a>
+    style="font-family: 'Lobster Two', cursive; font-size:25px; margin-left:80px;"><i class="fab fa-instagram"></i>Instagram</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
